# ML_experiments

./: .gitignore  CMakeLists.txt  ID3.py  MNIST.ipynb  analize.ipynb  dataset.py  heuristic.py  homework_main.ipynb  homework_modules.ipynb  lunar_lander.py  main.cpp  main.html  main.ipynb  main.py  main.py.html  main.py.ipynb  models.py  norm_data.py  out.txt  pairs.csv  render.py  render.sh  requirement.txt  requirements.txt  train.py  train_heruistic.py
AffinityPropogation/: CMakeLists.txt  analize.ipynb
FactorMachine/: boost_serialization_eigen.h  cut_data.py
FactorMachine/src/: factormachine.cpp
ID3/: main.py  pairs.csv  requirement.txt
LunarLander/: render.py  requirements.txt  run.sh  train_heruistic.py
Network_Framework/: homework_test_modules.ipynb
SparkEstimatorTransformer/: build.sbt
SparkEstimatorTransformer/res/: data.csv
include/: afPropogation.h  factormachine.h
res/: log.txt  log_train.txt
res/hybriteModel/1/: LunarLander-v2.ckpt.data-00000-of-00001  LunarLander-v2.ckpt.index
res/hybriteModel/2/: LunarLander-v2.ckpt.data-00000-of-00001
res/hybriteModel/3/: LunarLander-v2.ckpt.data-00000-of-00001  LunarLander-v2.ckpt.index
res/last_weight/1/: LunarLander-v2.ckpt.data-00000-of-00001
res/last_weight/3/: LunarLander-v2.ckpt.data-00000-of-00001  LunarLander-v2.ckpt.index
res/last_weight/4/: LunarLander-v2.ckpt.index
res/last_weight/5/: LunarLander-v2.ckpt.data-00000-of-00001  LunarLander-v2.ckpt.index
res/new_weight/1/: LunarLander-v2.ckpt.data-00000-of-00001  LunarLander-v2.ckpt.index
res/new_weight/3/: LunarLander-v2.ckpt.index
res/new_weight/4/: LunarLander-v2.ckpt.data-00000-of-00001
res/weights/1/: LunarLander-v2.ckpt.index  (+1 more)
src/: afPropogation.cpp
(+52 files in other folders)
